Modify build script & test build